feat: add configurable buffer time for dashboard loading

--- a/config/secrets.yaml
+++ b/config/secrets.yaml
@@ -11,3 +11,4 @@ superset:
   per_chart_retries: 2
   provider: db
   total_allocated_running_sec: 7200 # 2 hours
+  buffer_time_to_load_dashboard: 10
